--- a/lounge.html
+++ b/lounge.html
@@ -2,6 +2,10 @@
   <head>
     <title>Head First Lounge</title>
   </head>
+  <style>
+    body{background-color: rgb(0, 255, 42);}
+    p{ color: brown;}         
+  </style>
   <body>
     <h1>Welcome to the New and Improved Head First Lounge</h1>
     <img src="images/drinks.gif">
